--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_MAIN_LANGUAGE=
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -18,7 +18,7 @@ dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
