--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
-dgShowFileTree=true
+dgShowFileTree=false
 dgEnableSearch=false
 dgShowToc=true
 dgLinkPreview=true
