--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-macos is-frameless is-hidden-frameles
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=dark
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=false
