--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SITE_NAME_HEADER=Livewithgoats
-SITE_MAIN_LANGUAGE=
+SITE_NAME_HEADER=与山羊同住
+SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=yyyy/MM/dd HH:mm
